@@ -81,8 +81,6 @@ command_array_struct Commands[] = {
   {"killpets", command_kill_pets,0.0},
   {"listen", command_listen,	0.0},
   {"lock", command_lock_item,	0.0},
-  {"logs", command_logs,	0.0},
-  {"malloc", command_malloc,	0.0},
   {"maps", command_maps,	0.0},
   {"mapinfo", command_mapinfo,	0.0},
   {"mark", command_mark,	0.0},
@@ -94,13 +92,11 @@ command_array_struct Commands[] = {
   {"passwd", command_passwd, 0.0},
   {"peaceful", command_peaceful,0.0},
   {"pickup", command_pickup,	1.0},
-  {"players", command_players,	0.0},
   {"prepare", command_prepare,	1.0},
   {"quit", command_quit,	0.0},
   {"rename", command_rename_item,  0.0},
   {"resistances", command_resistances,	0.0},
   {"rotateshoottype", command_rotateshoottype,	0.0},
-  {"shutdown", command_shutdown, 0.0},
   {"skills", command_skills,	0.0},	/* shows player list of skills */
   {"use_skill", command_uskill, 1.0},
   {"quests", command_quests, 0.0},
@@ -109,7 +105,6 @@ command_array_struct Commands[] = {
   {"search-items", command_search_items,	0.0},
   {"showpets", command_showpets,	1.0},
   {"statistics", command_statistics,	0.0},
-  {"strings", command_strings,	0.0},
   {"take", command_take,	1.0},
   {"throw", command_throw,	1.0},
   {"time", command_time,	0.0},
@@ -245,22 +240,27 @@ command_array_struct WizCommands [] = {
   {"kick", (command_function)command_kick, 0.0},
   {"learn_special_prayer", command_learn_special_prayer, 0.0},
   {"learn_spell", command_learn_spell, 0.0},
-  {"plugin",command_loadplugin,0.0},
-  {"pluglist",command_listplugins,0.0},
-  {"plugout",command_unloadplugin,0.0},
+  {"logs", command_logs,	0.0},
+  {"malloc", command_malloc,	0.0},
   {"nodm", command_nowiz,0.0},
   {"nowiz", command_nowiz,0.0},
   {"patch", command_patch,0.0},
+  {"players", command_players,	0.0},
+  {"plugin",command_loadplugin,0.0},
+  {"pluglist",command_listplugins,0.0},
+  {"plugout",command_unloadplugin,0.0},
   {"remove", command_remove,0.0},
   {"reset", command_reset,0.0},
   {"set_god", command_setgod, 0.0},
   {"server_speed", command_speed,0.0},
+  {"shutdown", command_shutdown, 0.0},
   {"ssdumptable", command_ssdumptable,0.0},
   {"stack_clear", command_stack_clear, 0.0 },
   {"stack_list", command_stack_list, 0.0},
   {"stack_pop", command_stack_pop, 0.0 },
   {"stack_push", command_stack_push, 0.0 },
   {"stats", command_stats,0.0},
+  {"strings", command_strings,	0.0},
   {"style_info", command_style_map_info, 0.0},	/* Costly command, so make it wiz only */
   {"summon", command_summon,0.0},
   {"teleport", command_teleport,0.0},
