@@ -15,6 +15,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Make some commands DM only, and not visible to players.
+ server/commands.c
+Ryo 2007-01-04
+
 server/gods.c: Apply patch #1627442 by Aaron Baugher, to fix bug #1551735. Works
   by using a key_value of "divine_giver_name" to objects that are given by a god.
 Alex Schultz 2007-01-04
